Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#5555 closed bug (fixed)

[Installer] bad text formatting in about box

Reported by: diver Owned by: korli
Priority: normal Milestone: R1
Component: Applications/Installer Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

See screenshot.
Tested with hrev35795 in VirtualBox 3.0.12

Attachments (1)

about_installer.png (107.2 KB ) - added by diver 14 years ago.

Download all attachments as: .zip

Change History (5)

by diver, 14 years ago

Attachment: about_installer.png added

comment:1 by humdinger, 14 years ago

Resolution: fixed
Status: newclosed

Fixed with hrev35811.
Note, however, that the current implementation of bolding the app name is not translation sensitive as the number of bolded letters is fixed.

comment:2 by diver, 14 years ago

Does it deserves it's own ticket?

comment:3 by anevilyak, 14 years ago

That's probably already covered by the ticket whose # I currently forget that lists all apps that haven't been made layout/locale friendly.

comment:4 by diver, 14 years ago

Ah, ok, it is #4619 probably.

Note: See TracTickets for help on using tickets.