The bold title in Installer's about window encompassed a few letters of the regular text. Fixes #5555. Thanks diver.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35811 a95241bf-73f2-0310-859d-f6bbb57e9c96